# support-center

./: .env.example  .env.template  .gitignore  AUDIT_TRAIL_TASKS.md  CLAUDE.md  DEBUG_TAURI_CORS.md  DUPLICATE_API_REQUESTS_FIX_SUMMARY.md  DecoupleChatRendering.md  ENDPOINT_CLEANUP_TASK12.md  OPTIMIZATION_ARCHITECTURE.md  OPTIMIZATION_CHANGES_SUMMARY.md  OPTIMIZATION_TESTING_GUIDE.md  README.md  REFACTORING_REPORT.md  REFACTORING_REPORT_TASK3.md  REFACTORING_SUMMARY.md  SERVER_NGINX_FIX.md  SERVER_REDIRECT_ISSUE.md  SERVICE_REFACTORING_REPORT.md  SERVICE_REFACTORING_SUMMARY.md  SUMMARY.md  T016-cache-flow-diagram.md  T016-cache-integration-summary.md  T017-cache-integration-summary.md  T017-integration-flow.txt  T032-retry-ui-implementation-summary.md  T040-T042-implementation-summary.md  T041-T043-implementation-summary.md  T045-T046-T049-T051-implementation-summary.md  T054-T056-T058-T060-T062-implementation-summary.md  T068-cache-settings-integration-summary.md  TASK_14_COMPLETION_REPORT.md  chat-cync-improve.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fix-chat-navigation.md  image-storing-strategy.md  img-cache.md
src/agent-deployment/: .gitignore  Cargo.toml  config.example.toml
src/agent-deployment/src/: config.rs  main.rs
src/agent-deployment/src/api/: client.rs  mod.rs  types.rs
src/agent-deployment/src/audit/: logger.rs  mod.rs
src/agent-deployment/src/credentials/: mod.rs  vault.rs
src/agent-deployment/src/execution/: installer.rs  mod.rs  service.rs  smb.rs
src/agent-deployment/src/jobs/: executor.rs  mod.rs  poller.rs  reporter.rs
src/backend/: .env.example  .gitignore  CHANGES_SUMMARY.md  CONCURRENT_SESSION_LIMIT_IMPLEMENTATION.md  FINDING_47_RESOLUTION.md  INVALID_HTTP_DEBUG_SETUP.md  LOGGING_REVIEW_REPORT.md  MIGRATION_FINAL_VERIFICATION.md  MIGRATION_GUIDE_UUID.md  REFACTORING_REPORT_SCREENSHOT_SERVICE.md  alembic.ini  celery_app.py  database_setup.py  delete_database.py  init_db.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
src/backend/.claude/: ralph-loop.local.md
src/backend/alembic/: env.py
src/backend/alembic/versions/: .gitkeep  2025_12_05_1858-55e01689ab91_2025_12_05_replace_smb_with_minio_.py  2025_12_05_2141-1cf4dd885635_remove_chat_attachment_approval_table.py  2025_12_05_2153-64541d8224bf_add_is_active_is_deleted_to_business_.py  2025_12_05_2216-cbefea7c6997_remove_resolution_type_and_update_.py  2025_12_05_2225-7c34e98b5a03_merge_resolution_and_cache_removal.py  2025_12_05_2231-cbc75afe58dc_remove_file_types_table_and_column.py  2025_12_06_0022-7749c10dd26b_add_screenshots_table.py  2025_12_06_0851-4f6386fea68d_create_system_events_table.py  2025_12_06_0941-f5f80e3e1dbd_add_sub_tasks_tables.py  2025_12_06_2330_add_tags_bilingual_and_ip_address.py  2025_12_06_2400_remove_session_and_assign_types_tables.py  2025_12_06_2500_rename_tables_for_clarity.py  2025_12_06_2600_remove_assign_type_id.py  2025_12_06_2700_add_composite_indexes_for_query_performance.py  2025_12_06_add_bilingual_support_to_request_status_and_system_messages.py  2025_12_06_remove_tables.py  (+72 more)
src/backend/api/routes/: root.py  (+1 more)
src/backend/app/: __init__.py  factory.py
src/backend/core/: __init__.py  async_utils.py  audit_config.py  audit_decorator.py  cache.py  config.py  database.py  date_formatting.py  decorators.py  dependencies.py  encryption.py  factory.py  heartbeat_summary.py  instrumentator.py  logging_config.py  metrics.py  sanitizer.py  scheduler.py  scheduler_manager.py  schema_base.py  security.py  semver.py  sessions.py  uvicorn_logging.py
src/backend/crud/: __init__.py  active_directory_config_crud.py  base_crud.py  base_repository.py  chat_crud.py  domain_user_crud.py  email_config_crud.py  organizational_unit_crud.py  page_crud.py  remote_access_crud.py  section_crud.py  service_request_crud.py  service_section_crud.py  user_crud.py  user_role_crud.py
src/backend/db/: __init__.py  database.py  enums.py  fix_base_dn.py  init_db.py  models.py  setup.py
src/backend/docs/: DEBUGGING_INVALID_HTTP_REQUESTS.md  EVENTS_CONSUMER_LAG_MONITORING.md  EVENTS_MONITORING_QUICKSTART.md  IMPLEMENTATION_CODE_SNIPPETS.md  IMPLEMENTATION_SUMMARY.md
src/backend/models/: __init__.py  auth_models.py  database_models.py
src/backend/repositories/: __init__.py  base_repository.py  chat_repository.py  domain_user_repository.py  organizational_unit_repository.py  page_repository.py  remote_access_repository.py  service_request_repository.py  service_section_repository.py  system_event_repository.py  user_repository.py  user_role_repository.py  web_session_repository.py
src/backend/schemas/: __init__.py
src/backend/scripts/: reset_running_executions.py  test_scheduler_execution.py  validate_scheduled_tasks.py
src/backend/services/: active_directory.py  auth_service.py  business_unit_region_service.py  business_unit_service.py  business_unit_user_assign_service.py  category_service.py  chat_file_service.py  chat_read_state_service.py  chat_service.py  client_version_service.py  credential_service.py  deployment_job_service.py  desktop_session_service.py  device_service.py  domain_user_service.py  event_coalescer.py  event_publisher.py  event_trigger_service.py  event_types.py  file_service.py  minio_service.py  notification_service.py  organizational_unit_service.py  outshift_reporting_service.py  page_service.py  permission_cache_service.py  priority_service.py  remote_access_service.py  report_config_service.py  reporting_service.py  request_details_metadata_service.py  request_note_service.py  request_service.py  request_status_service.py  request_type_service.py  role_service.py  scheduler_service.py  screenshot_service.py  service_section_service.py  shift_evaluator.py  (+10 more)
src/backend/tasks/: __init__.py  ad_sync_tasks.py  base.py  database.py  deployment_tasks.py  maintenance_tasks.py  minio_file_tasks.py  remote_access_tasks.py  scheduler_tasks.py  whatsapp_tasks.py
src/backend/tests/: ENDPOINT_INVENTORY.md  README.md  __init__.py  conftest.py  factories.py  test_presence_config.py
(+2064 files in other folders)
